--- a/.github/workflows/textmate.yml
+++ b/.github/workflows/textmate.yml
@@ -17,7 +17,13 @@ jobs:
       - name: Configure
         working-directory: textmate
         run: |
+          BREW_PREFIX="$(brew --prefix)"
+          cat > local.rave <<EOF
+          add FLAGS "-I${BREW_PREFIX}/include"
+          add LN_FLAGS "-L${BREW_PREFIX}/lib"
+          EOF
           ./configure
+
       - name: Build
         working-directory: textmate
         run: |
