--- a/.github/workflows/textmate.yml
+++ b/.github/workflows/textmate.yml
@@ -5,16 +5,13 @@ on:
 jobs:
   build-textmate-macos:
     runs-on: macos-26
-
     env:
-      BUILD_DIR: ${{ github.workspace }}/tm-build
       MACOSX_DEPLOYMENT_TARGET: "26.0"
-
     steps:
       - name: Clone source
         run: |
           git clone --recursive --depth 1 https://github.com/textmate/textmate.git textmate
-
+    
       - name: Install deps
         run: |
           brew install boost capnp google-sparsehash multimarkdown ninja ragel tree
@@ -22,59 +19,57 @@ jobs:
       - name: Configure
         working-directory: textmate
         run: |
-          set -euo pipefail
-
           BREW_PREFIX="$(brew --prefix)"
-
-          printf 'add FLAGS "-I%s/include"\nadd LN_FLAGS "-L%s/lib"\n' \
-            "$BREW_PREFIX" "$BREW_PREFIX" > local.rave
-
-          mkdir -p "$BUILD_DIR"
-
-          export builddir="$BUILD_DIR"
-
+          cat > local.rave <<EOF
+          add FLAGS "-I${BREW_PREFIX}/include"
+          add LN_FLAGS "-L${BREW_PREFIX}/lib"
+          EOF
           ./configure
 
       - name: Build
         working-directory: textmate
         run: |
-          set -euo pipefail
-          ninja -C "$BUILD_DIR" TextMate
-
+          ninja TextMate
+      
       - name: List files
+        working-directory: textmate/release
         run: |
-          set -euo pipefail
-          tree "$BUILD_DIR/release" || true
-          ls -la "$BUILD_DIR/release/Applications/TextMate" || true
+          tree .
 
       - name: Package DMG
+        shell: bash
         run: |
           set -euo pipefail
 
-          APP="$BUILD_DIR/release/Applications/TextMate/TextMate.app"
-          test -d "$APP"
+          APP_PATH="$HOME/build/textmate/release/Applications/TextMate/TextMate.app"
+          DIST_DIR="$GITHUB_WORKSPACE/dist"
+          DMG_ROOT="$DIST_DIR/dmgroot"
 
-          rm -rf dist
-          mkdir -p dist/stage
+          rm -rf "$DIST_DIR"
+          mkdir -p "$DMG_ROOT"
 
-          # Copy app into staging folder
-          ditto "$APP" "dist/stage/TextMate.app"
+          # Copy the .app bundle (ditto preserves bundle metadata better than cp -R)
+          /usr/bin/ditto "$APP_PATH" "$DMG_ROOT/TextMate.app"
 
-          # Drag-to-install convenience symlink
-          ln -s /Applications "dist/stage/Applications"
+          # Common DMG convenience link
+          ln -s /Applications "$DMG_ROOT/Applications"
 
-          # Build compressed DMG (UDZO)
+          # Create compressed read-only DMG
+          DMG_NAME="TextMate-${{ github.sha }}-macos26-arm64.dmg"
           hdiutil create \
             -volname "TextMate" \
-            -srcfolder "dist/stage" \
+            -srcfolder "$DMG_ROOT" \
             -ov \
             -format UDZO \
-            "dist/TextMate-macos-26-arm64.dmg"
+            "$DIST_DIR/$DMG_NAME"
 
-          ls -lh dist
+          echo "DMG created at: $DIST_DIR/$DMG_NAME"
 
       - name: Upload DMG artifact
         uses: actions/upload-artifact@v4
         with:
-          name: TextMate-macos-26-arm64
-          path: dist/TextMate-macos-26-arm64.dmg
+          name: TextMate-macos26-arm64
+          path: dist/*.dmg
+
+
+
